--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 zookeeper:
   image: wurstmeister/zookeeper
   ports: 
-    - "2181"
+    - "2181:2181"
 kafka:
-  build: .
+  image: sweetspot/kafka:0.1
   ports:
-    - "9092"
+    - "9092:9092"
   links: 
     - zookeeper:zk
   environment:
